fixes top alignment bug

--- a/scss/custom/_clip.scss
+++ b/scss/custom/_clip.scss
@@ -7,6 +7,7 @@
 }
 
 .clip-top {
+  top: 0;
   border-top: 0;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -21,6 +22,7 @@
 }
 
 .clip-top-right {
+  top: 0;
   right: 0;
   border-top: 0;
   border-top-left-radius: 0;
